# eta-ethereum

./: AUTHORS  ChangeLog.md  README.md  cabal.project  eta-ethereum.cabal
.circleci/: config.yml
cmd/evm/: Commands.hs  Main.hs
cmd/evm/Commands/: Compile.hs  Run.hs  StateTest.hs  Types.hs
ethereum-common/: ethereum-common.cabal
ethereum-common/Ethereum/Common/: Math.hs  Safe.hs
ethereum-common/test/: Main.hs
ethereum-common/test/Test/Ethereum/Common/: Math.hs
ethereum-core/: ethereum-core.cabal
ethereum-core/Ethereum/ASM/: Compiler.hs  Lexer.x  Tokens.hs
ethereum-core/Ethereum/VM/: OpCode.hs
ethereum-core/test/: Main.hs
ethereum-core/test/Test/Ethereum/ASM/: Lexer.hs
tools/evm/: Commands.hs  Main.hs
tools/evm/Commands/: Compile.hs  Disassemble.hs  Types.hs
