name:                ethereum-common
version:             0.1.0.0
synopsis:            Common utility functions for Ethereum
homepage:            https://github.com/rahulmutt/eta-ethereum
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
category:            Blockchain
license:             LGPL-3.0-or-later
license-file:        ../COPYING.LESSER
build-type:          Simple
cabal-version:       1.12

library
  exposed-modules: Ethereum.Common.Math
                   Ethereum.Common.Safe
  build-depends:   base >=4.11
                 , bytestring
                 , integer
                 , ghc-prim
  default-language:    Haskell2010
  default-extensions:  MagicHash
  eta-options: -Wall -Werror
  eta-options: -ddump-stg -ddump-to-file
  
test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules: Test.Ethereum.Common.Math
  build-depends:   base >=4.11
                 , tasty
                 , tasty-hunit
                 , ethereum-common
  default-language:   Haskell2010
  eta-options: -Wall -Werror