name:                ethereum-core
version:             0.1.0.0
synopsis:            Core utilities for Ethereum
homepage:            https://github.com/rahulmutt/eta-ethereum
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
category:            Blockchain
license:             LGPL-3.0-or-later
license-file:        ../COPYING.LESSER
build-type:          Simple
cabal-version:       1.12

library
  exposed-modules: Ethereum.ASM.Compiler
                   Ethereum.ASM.Lexer
                   Ethereum.ASM.Tokens
                   Ethereum.VM.OpCode
  build-depends:   base >=4.11
                 , array
                 , bytestring
                 , containers
                 , ethereum-common
                 , mtl
  build-tools: alex
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       NamedFieldPuns
                       TupleSections
                       StrictData
  eta-options: -Wall -Werror
  
test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules: Test.Ethereum.ASM.Lexer
  build-depends:   base >=4.11
                 , tasty
                 , tasty-hunit
                 , ethereum-core
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  eta-options: -Wall -Werror
